--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,9 @@ dependencies = [
     "tiktoken >=0.8.0",
     "uvicorn ~=0.32.1",
     "langchain-mcp-adapters>=0.1.10",
+    "google-search-results",
+    "langchain-google-community",
+    "google-api-python-client==2.185.0"
 ]
 
 [dependency-groups]
