env.example updated

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@ AZURE_OPENAI_API_KEY=
 DEEPSEEK_API_KEY=
 ANTHROPIC_API_KEY=
 GOOGLE_API_KEY=
+GOOGLE_CSE_ID=
 GROQ_API_KEY=
+SEARCHAPI_API_KEY=
 OPENROUTER_API_KEY=
 USE_AWS_BEDROCK=false
 
